--- a/Dockerfile.tomcat-ssl
+++ b/Dockerfile.tomcat-ssl
@@ -2,4 +2,4 @@ FROM tomcat:8-jre7-alpine
 
 RUN rm -rf /usr/local/tomcat/webapps/ROOT
 COPY ./target/sticky-example.war /usr/local/tomcat/webapps/ROOT.war
-COPY ./server.xml /usr/local/tomcat/conf/server.xml
+COPY ./conf/server.xml /usr/local/tomcat/conf/server.xml
